fixed bug on events page when events wrapped to two lines

--- a/assets/scss/layouts/_l-events.scss
+++ b/assets/scss/layouts/_l-events.scss
@@ -73,21 +73,15 @@
       font-family: $font-family--bold;
       font-size: $font-size--small;
       width: 70px;
+      height: 100%;
+      position: absolute;
     }
 
     &__description {
       font-family: $font-family--light;
       font-size: $font-size--xsmall;
-      position: absolute;
-      left: 90px;
-
-      @include breakpoint(medium) {
-        left: 100px;
-      }
-
-      @include breakpoint(large) {
-        left: 110px;
-      }
+      margin-left: 90px;
+      display: block;
 
     }
   }
