--- a/assets/scss/modules/_footer.scss
+++ b/assets/scss/modules/_footer.scss
@@ -78,15 +78,17 @@
       color: $cream;
       opacity: 0.7;
       display: block;
-      line-height: 2.5em;
-
-      @include breakpoint(medium){
-        line-height: 2em;
-      }
+      margin-bottom: 10px;
+      margin-right: 15px;
 
       &:hover {
         opacity: 1;
       }
+    }
+
+    strong {
+      font-family: $font-family--bold;
+      color: $white;
     }
 
   }
